--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^7.27.0",
+    "@mui/x-date-pickers-pro": "^7.27.0",
     "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -23,7 +24,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
-    "react-datepicker": "^8.0.0",
+    "react-datepicker": "^8.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
