--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
+    "@mui/x-charts": "^7.27.0",
+    "@mui/x-charts-pro": "^7.27.0",
     "@mui/x-date-pickers": "^7.27.0",
     "@mui/x-date-pickers-pro": "^7.27.0",
     "@radix-ui/react-slot": "^1.1.2",
